--- a/Morpion/Morpion.vcxproj.filters
+++ b/Morpion/Morpion.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Morpion.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="client.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
