--- a/Morpion/Morpion.vcxproj
+++ b/Morpion/Morpion.vcxproj
@@ -134,6 +134,9 @@
     <ClCompile Include="client.cpp" />
     <ClCompile Include="Morpion.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Morpion.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
