--- a/Morpion/Morpion.vcxproj.filters
+++ b/Morpion/Morpion.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Morpion.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
