--- a/MorpionServeur/MorpionServeur.vcxproj.filters
+++ b/MorpionServeur/MorpionServeur.vcxproj.filters
@@ -18,22 +18,8 @@
     <ClCompile Include="MorpionServeur.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="..\jsoncppdist\jsoncpp.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="..\simdjson\simdjson.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\jsoncppdist\json\json.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="..\jsoncppdist\json\json-forwards.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="..\simdjson\simdjson.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
