--- a/Morpion/Morpion.vcxproj.filters
+++ b/Morpion/Morpion.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
