--- a/MorpionServeur/MorpionServeur.vcxproj
+++ b/MorpionServeur/MorpionServeur.vcxproj
@@ -107,7 +107,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)..\SFML-2.6.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>NotSet</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-audio-d.lib;sfml-system-d.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)..\SFML-2.6.1\lib</AdditionalLibraryDirectories>
