--- a/Morpion/Morpion.vcxproj.filters
+++ b/Morpion/Morpion.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Fichiers sources\Font">
+      <UniqueIdentifier>{7c95840f-bd22-4633-8ebd-84d98b994cb5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Morpion.cpp">
@@ -26,5 +29,8 @@
     <ClInclude Include="Morpion.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="arial.TTF" />
   </ItemGroup>
 </Project>
