--- a/MorpionServeur/MorpionServeur.vcxproj
+++ b/MorpionServeur/MorpionServeur.vcxproj
@@ -107,7 +107,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)..\SFML-2.6.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-audio-d.lib;sfml-system-d.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)..\SFML-2.6.1\lib</AdditionalLibraryDirectories>
@@ -135,11 +135,9 @@
   <ItemGroup>
     <ClCompile Include="MorpionServer.cpp" />
     <ClCompile Include="window.cpp" />
-    <ClCompile Include="Serve.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MorpionServer.hpp" />
-    <ClInclude Include="Serve.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
