Grosse update + Json

--- a/MorpionServeur/MorpionServeur.vcxproj
+++ b/MorpionServeur/MorpionServeur.vcxproj
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\jsoncppdist;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\SFML-2.6.1\include;$(ProjectDir)..\jsoncppdist;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -137,7 +137,7 @@
   <ItemGroup>
     <ClCompile Include="Json.cpp" />
     <ClCompile Include="MorpionServeur.cpp" />
-    <ClCompile Include="Serve.cpp" />
+    <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Json.hpp" />
