--- a/MorpionServeur/MorpionServeur.vcxproj.filters
+++ b/MorpionServeur/MorpionServeur.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="Threading.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="window.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
