--- a/Morpion/Morpion.vcxproj.filters
+++ b/Morpion/Morpion.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="client.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="Threading.cpp">
+    <ClCompile Include="ClientThreading.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +29,10 @@
     <ClInclude Include="Morpion.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="Threading.hpp">
+    <ClInclude Include="client.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="ClientThreading.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
